# heron

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  __init__.py  heron.org  notes.org  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
conda/: spec-file.txt
condor/: heron.submit
configs/: ankh-morpork.yaml
data/: README  bbh_mass1_only_hp.txt  bbh_mass1_only_hp_3D.txt  bbh_mass1_only_hp_3D_TEST.txt  bbh_mass1_only_hp_TEST.txt  concrete.csv
docs/: Makefile  bilby_integration.md  conf.py  george.rst  getting-started.rst  gpytorch.rst  heron.bib  heron.rst  index.rst  installation.rst  likelihood-tutorial.ipynb  likelihood.rst  make.bat  matched-likelihood.rst  model-interface.rst  modules.rst  new-model.rst  theory.rst  training.rst  usage.rst  utils.rst  verification-tutorial.ipynb  verification.rst
examples/: README.md  bilby_integration_example.py  gpr_training_config.yml  training_data_config.yml
heron/: #data.py#  __init__.py  _version.py  acquisition.py  asimov.py  bilby.py  cli.py  corner.py  data.py  detector.py  filtering.py  filters.py  gw.py  heron_template.yml  inference.py  injection.py  kernels.py  likelihood.py  priors.py  regression.py  sampling.py  testing.py  train_gpr.py  training.py  training_data.py  types.py  utils.py  waveform.py
notebooks/: 2  =2  Building a Surrogate Model for Numerical Relativity BBH Waveforms -1 to 1 normalisation.ipynb  Concrete Heron.ipynb  Concrete Heron2.ipynb  Convergence Plot.ipynb  GT Catalogue Plot.ipynb  George Test.ipynb  Gravitational Heron.ipynb  HODLR Test.ipynb  Heron Data.ipynb  Heron Neurons.ipynb  Heron on Wine.ipynb  IMRPhenom-based Surrogate.ipynb  Inverted Gravitational Heron.ipynb  results.tex  (+6 more)
(+218 files in other folders)
